--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "elegant-tools",
   "version": "1.0.0",
   "description": "",
-  "module": "dist/index.esm.js",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "type": "module",
@@ -14,7 +13,7 @@
     "release": "npm i && npm run bundle && npm run cleanup",
     "format": "dprint fmt ./src/**/*"
   },
-  "keywords": [],
+  "keywords": ["aws", "lambda", "tools", "logging", "context"],
   "author": "Andrey Chausenko",
   "license": "ISC",
   "devDependencies": {
