--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^29.5.2",
+    "@types/json-stringify-safe": "^5.0.0",
     "@types/node": "^18.16.17",
     "esbuild": "^0.18.0",
     "jest": "^29.5.0",
+    "json-stringify-safe": "^5.0.1",
     "npm-dts": "^1.3.12",
     "ts-jest": "^29.1.0",
     "typescript": "^5.1.3"
