--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "esbuild": "^0.18.0",
     "jest": "^29.5.0",
     "json-stringify-safe": "^5.0.1",
+    "memory-savvy-queue": "^1.0.1",
     "npm-dts": "^1.3.12",
     "ts-jest": "^29.1.0",
     "typescript": "^5.1.3"
