--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "@types/jest": "^29.5.2",
     "@types/json-stringify-safe": "^5.0.0",
     "@types/node": "^18.16.17",
+    "@types/uuid": "^9.0.2",
     "esbuild": "^0.18.0",
     "jest": "^29.5.0",
     "json-stringify-safe": "^5.0.1",
     "memory-savvy-queue": "^1.0.1",
     "npm-dts": "^1.3.12",
     "ts-jest": "^29.1.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "uuid": "^9.0.0"
   },
   "jest": {
     "preset": "ts-jest",
