--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/json-stringify-safe": "^5.0.0",
     "@types/node": "^18.16.17",
     "@types/uuid": "^9.0.2",
+    "dayjs": "^1.11.9",
     "esbuild": "^0.18.0",
     "jest": "^29.5.0",
     "json-stringify-safe": "^5.0.1",
